--- a/package.json
+++ b/package.json
@@ -20,13 +20,13 @@
     "@fontsource/roboto": "^5.2.7",
     "@trivago/prettier-plugin-sort-imports": "^5.2.2",
     "axios": "^1.12.2",
-    "normalize.css": "^8.0.1",
     "pinia": "^3.0.3",
     "vue": "^3.5.18",
     "vue-router": "^4.5.1",
     "vuetify": "^3.10.0"
   },
   "devDependencies": {
+    "@arco-design/web-vue": "^2.57.0",
     "@tsconfig/node22": "^22.0.2",
     "@types/jsdom": "^21.1.7",
     "@types/node": "^22.16.5",
